--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
 							<div class="logo"><span class="icon fa-gem"></span></div>
 							<h2>Rui The Analyst Portfolio</h2>
 							<p>Data Analyst well versed in SQL, Python, Tableau, Excel <br>
-								 <a href="https://www.linkedin.com/in/rui-li-81722a1b9/">@RuiLi_LinkedIn</a></p>
+								 <a href="https://www.linkedin.com/in/rui-li-81722a1b9/">@RuiLi_LinkedIn</a> <br>
+								 <a href="https://public.tableau.com/app/profile/rui.li7808">@RuiLi_Tableau</a></p>
 						</div>
 					</section>
 
@@ -61,10 +62,10 @@
 									<div class="content">
 										<h2 class="major">Property analysis Project  
 											<br> Python/SQL SERVER/Tableau/Trello</h2>
-										<p> In this project we crawl raw data from <a href="https://www.domain.com.au/">Domain.au </a> and transform it into Microsoft Excel 
-											to make it more usable for analysis. And we try the machine learning model to predict unknown price.
+										<p> In this project, we crawl raw data from <a href="https://www.domain.com.au/">Domain.au </a> and transform it into Microsoft Excel 
+											to make it more usable for analysis. And we try the machine learning model to predict unknown prices.
 											</p>
-											<a href="https://public.tableau.com/app/profile/rui.li7808/viz/Sydney-Property-Visualisation/Dashboard1" class="special">data visualization by Tableau</a>
+											<a href="https://public.tableau.com/app/profile/rui.li7808/viz/Sydney-Property-Summary/SummayDashboard" class="special">data visualization by Tableau</a>
 											<a href="https://github.com/RuiLi1997/house-rating" class="special">VIEW PROJECT CODE</a>
 										
 										
@@ -97,10 +98,10 @@
 										<h2 class="major">Toxicity Classification
 											<br> Python/scikit-learn/Tensorflow
 										</h2>
-										<p>In this project, I analysis a large number of Wikipedia comments which have been labeled by human raters for toxic behavior.
+										<p>In this project, I analyse a large number of Wikipedia comments which have been labeled by human raters for toxic behavior.
 											The raw data is from 
 											<a href="https://www.kaggle.com/c/jigsaw-toxic-comment-classification-challenge/data">Jigsaw/Conversation AI</a>.
-											Random Forest and Recurrent neural network are used to build the model.
+											Random Forest and Recurrent neural networks are used to build the model.
 										</p>
 										<a href="https://github.com/RuiLi1997/Toxic-Comment-Classification-Challenge" class="special">VIEW PROJECT CODE</a>
 									</div>
