--- a/index.html
+++ b/index.html
@@ -79,12 +79,12 @@
 									<a  class="image"><img src="images/co2.jpg" alt="" /></a>
 									<div class="content">
 										<h2 class="major">Global Carbon dioxide	Emissions
-											<br> SQL SERVER/Tableau/Microsoft excel
+											<br> SQL SERVER/Power BI/Microsoft excel
 										</h2>
 										<p>In this project, I focus on the total and average emissions in different countries and different income groups. 
 											The raw data is from <a href="https://www.worldbank.org/en/home">The World Bank</a>.
 										</p>
-										<a href="https://public.tableau.com/app/profile/rui.li7808/viz/GlobalCO2EmissionsAnalysis/GlobalCO2Analysis" class="special">data visualization by Tableau</a>
+										<a href="https://app.powerbi.com/groups/me/reports/59140ef4-6ea6-410f-aa8f-b2ef79d53201/ReportSection" class="special">data visualization by Tableau</a>
 										<!-- <a href="#" class="special">Data Cleaning in SQL</a> -->
 									</div>
 								</div>
