--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 										<p>In this project, I focus on the total and average emissions in different countries and different income groups. 
 											The raw data is from <a href="https://www.worldbank.org/en/home">The World Bank</a>.
 										</p>
-										<a href="https://app.powerbi.com/groups/me/reports/59140ef4-6ea6-410f-aa8f-b2ef79d53201/ReportSection" class="special">data visualization by Tableau</a>
+										<a href="https://app.powerbi.com/groups/me/reports/59140ef4-6ea6-410f-aa8f-b2ef79d53201/ReportSection" class="special">data visualization by Power BI</a>
 										<!-- <a href="#" class="special">Data Cleaning in SQL</a> -->
 									</div>
 								</div>
