--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Rui The Analyst Portfolio</title>
+		<title>Rui The Data Engineer Portfolio</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -45,10 +45,10 @@
 					<section id="banner">
 						<div class="inner">
 							<div class="logo"><span class="icon fa-gem"></span></div>
-							<h2>Rui The Analyst Portfolio</h2>
-							<p>Data Analyst well versed in SQL, Python, Tableau, Excel <br>
+							<h2>Rui The Data Engineer Portfolio</h2>
+							<p>Power BI & Excel Developer | SQL Sever & SSIS & Data Flow | Azure & AWS | <br>
+								Purpose: Improving data-driven decision <br>
 								 <a href="https://www.linkedin.com/in/rui-li-81722a1b9/">@RuiLi_LinkedIn</a> <br>
-								 <a href="https://public.tableau.com/app/profile/rui.li7808">@RuiLi_Tableau</a></p>
 						</div>
 					</section>
 
